# polars_schema_validate

./: Cargo.toml  README.md
.claude/: settings.local.json
polars_schema_derive/: Cargo.toml
polars_schema_derive/src/: lib.rs
polars_schema_validate/: Cargo.toml
polars_schema_validate/src/: error.rs  lib.rs
polars_schema_validate/tests/: chrono_tests.rs  rayon_tests.rs  validation_tests.rs
