[workspace]
members = ["polars_schema_validate", "polars_schema_derive"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/yourusername/polars_schema_validate"

[workspace.dependencies]
polars = { version = "0.44", features = ["lazy"] }
anyhow = "1.0"
syn = { version = "2.0", features = ["full", "derive"] }
quote = "1.0"
proc-macro2 = "1.0"