[package]
name = "polars_schema_validate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust library for validating Polars DataFrame schemas using derive macros"
keywords = ["polars", "dataframe", "schema", "validation", "derive"]
categories = ["data-structures", "database"]

[dependencies]
polars.workspace = true
polars_schema_derive = { version = "0.1.0", path = "../polars_schema_derive" }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
polars = { workspace = true, features = ["lazy", "strings", "temporal"] }
chrono = "0.4"
rayon = "1.8"

[features]
default = ["chrono"]
chrono = ["dep:chrono", "polars/temporal", "polars_schema_derive/chrono"]